--- a/index.htm
+++ b/index.htm
@@ -29,9 +29,9 @@
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/appIcon.png">
     <link rel="apple-touch-icon-precomposed" href="images/appIcon.png">
-    <link id="stylesheet" href='http://serverapi.arcgisonline.com/jsapi/arcgis/3.5/js/dojo/dojox/mobile/themes/iPhone/iPhone.css' rel='stylesheet'>
+    <link id="stylesheet" href='http://js.arcgis.com/3.8/js/dojo/dojox/mobile/themes/iPhone/iPhone.css"' rel='stylesheet'>
     <link href="styles/myGovServices.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.5/js/esri/css/esri.css">
+    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.8/js/esri/css/esri.css">
     <link rel="Stylesheet" id="dynamicStyleSheet">
     <script type="text/javascript">
         var dojoConfig = {
@@ -44,7 +44,7 @@
 			extraLocale: ['fr','en']
             };
     </script>
-    <script src="http://serverapi.arcgisonline.com/jsapi/arcgis/3.5compact" type="text/javascript"></script>
+    <script src="http://js.arcgis.com/3.8" type="text/javascript"></script>
     <script src="js/internationalization.js" type="text/javascript"></script>
     <script src="js/infoWindow.js" type="text/javascript"></script>
     <script src="js/baseMapGallery.js" type="text/javascript"></script>
