Updated iPhone stylesheet link
The iPhone stylesheet has been renamed, the link was updated to reflect
its current path on the Esri Inc server.

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/appIcon.png">
     <link rel="apple-touch-icon-precomposed" href="images/appIcon.png">
-    <link id="stylesheet" href='http://js.arcgis.com/3.8/js/dojo/dojox/mobile/themes/iPhone/iPhone.css"' rel='stylesheet'>
+    <link id="stylesheet" href='http://js.arcgis.com/3.8/js/dojo/dojox/mobile/themes/iphone/iphone.css' rel='stylesheet'>
     <link href="styles/myGovServices.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.8/js/esri/css/esri.css">
     <link rel="Stylesheet" id="dynamicStyleSheet">
