--- a/français/index.htm
+++ b/français/index.htm
@@ -7,7 +7,7 @@
 	 | Copyright 2012 Esri
 	 |
 	 | ArcGIS for Canadian Municipalities / ArcGIS pour les municipalités canadiennes
-	 | My Municipal Government Services v10.2.0 / Mes services municipaux v10.2.0
+	 | My Municipal Government Services v10.2.0.1 / Mes services municipaux v10.2.0.1
 	 | This file was modified by Esri Canada - Copyright 2013 Esri Canada
 	 |
 	 |
@@ -125,7 +125,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="divMainContainer" dojotype="dojox.mobile.View" selected="true" onclick="clearAutocomplete();">
+		<div id="divMainContainer" onclick="clearAutocomplete();">
 			<div id="mapNavigation" style="display:none;">
 				<strong></strong><br>
 				<figure>
